feat(distillery): Complete rewrite + structure refactor